Source and target of maven compiler set at 1.8 and deleted unnecessary .gitignore files

--- a/seip2023_practical_assignments/pom.xml
+++ b/seip2023_practical_assignments/pom.xml
@@ -8,7 +8,14 @@
   <name>SEIP 2023 Practical Assignments</name>
   <description>Lab exercise seip 2023</description>
   
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
   <modules>
   	<module>gradeshistogram</module>
   </modules>
+
 </project>
