--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Change directory to 'seip2023_practical_assignments'
+      run: cd seip2023_practical_assignments
     - name: Build with Maven
       run: mvn clean package
 
