--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,11 +25,11 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Change directory to 'seip2023_practical_assignments'
-      run: cd seip2023_practical_assignments
     - name: Build with Maven
-      run: cd seip2023_practical_assignments && mvn clean package
-
+      run:  cd seip2023_practical_assignments && mvn clean package
+    - name: Generate JaCoCo Coverage Report
+      run:  cd seip2023_practical_assignments && mvn jacoco:report
+      
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
-    # uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
